--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-    "name": "natours",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
-        "start:prod": "NODE_ENV=production nodemon server.js",
-        "debug": "ndb server.js",
-        "watch:js": "parcel watch ./public/js/index.js --out-dir ./public --out-file bundle.js",
-        "build:js": "parcel build ./public/js/index.js --out-dir ./public --out-file bundle.js"
-    },
-    "author": "Yang",
-    "license": "ISC",
-    "dependencies": {
-        "@babel/polyfill": "^7.8.7",
-        "axios": "^0.19.2",
-        "bcryptjs": "^2.4.3",
-        "compression": "^1.7.4",
-        "cookie-parser": "^1.4.5",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "express-mongo-sanitize": "^2.0.0",
-        "express-rate-limit": "^5.1.3",
-        "helmet": "^3.22.0",
-        "hpp": "^0.2.3",
-        "html-to-text": "^5.1.1",
-        "jsonwebtoken": "^8.5.1",
-        "lodash": "^4.17.15",
-        "mongoose": "^5.9.13",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.2",
-        "nodemailer": "^6.4.6",
-        "pug": "^2.0.4",
-        "slugify": "^1.4.0",
-        "stripe": "^8.55.0",
-        "validator": "^13.0.0",
-        "xss-clean": "^0.1.1"
-    },
-    "devDependencies": {
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.1.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.19.0",
-        "parcel-bundler": "^1.12.4",
-        "prettier": "^2.0.5"
-    },
-    "engines": {
-        "node": ">=10.0.0"
-    }
+  "name": "natours",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public --out-file bundle.js",
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public --out-file bundle.js"
+  },
+  "author": "Yang",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/polyfill": "^7.8.7",
+    "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^3.22.0",
+    "hpp": "^0.2.3",
+    "html-to-text": "^5.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.13",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
+    "pug": "^2.0.4",
+    "slugify": "^1.4.0",
+    "stripe": "^8.55.0",
+    "validator": "^13.0.0",
+    "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^2.0.5"
+  },
+  "engines": {
+    "node": "^13"
+  }
 }
